--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/assets/scss/custom.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Honk&display=swap"
+      rel="stylesheet"
+    />
     <title></title>
+    <script src="/src/js/pixi.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
