--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Honk&display=swap"
       rel="stylesheet"
     />
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <title></title>
     <script src="/src/js/pixi.min.js"></script>
   </head>
